# Akane---JUCE

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE_CODE_INTEGRATION.md  CMakeLists.txt  JUCE  ULTIMATE_PLUCK_README.md
Source/: AdvancedEffects.h  BasicOscillator.h  EffectsPanel.h  GrainVisualizer.h  LFO.h  LFOPanel.h  MacroPanel.h  MacroSystem.h  ModulationMatrix.h  ModulationMatrixView.h  PerformancePanel.h  PluginProcessor.cpp  PresetBrowser.h  PresetManager.h  PresetManager.h.bak  ResizableUI.h  TooltipSystem.h  UltimatePluckEditor.h  UltimatePluckEngine.h  UltimatePluckProcessor.h  UndoRedoSystem.h  VisualFeedbackPanel.h
